--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "types.ts"]
+  "include": ["src", "types.ts", "src/**/*.ts", "src/**/*.tsx", "vite-env.d.ts"]
 }
